--- a/index.html
+++ b/index.html
@@ -493,7 +493,7 @@
 <body>
     <div class="container">
         <header>
-            <h1>淮安4日游 · 深度行程地图</h1>
+            <h1>淮安4日游 · 行程图</h1>
             <p class="subtitle">运河古都 · 淮扬美食 · 伟人故里</p>
         </header>
         
